--- a/build.gradle
+++ b/build.gradle
@@ -31,8 +31,7 @@ repositories {
 }
 
 dependencies {
-    implementation project(':common')
-    implementation project(':entity')
+    implementation project(':ishigami')
 
     implementation 'javax.xml.bind:jaxb-api:2.3.1'
     implementation 'javax.activation:activation:1.1.1'
