--- a/build.gradle
+++ b/build.gradle
@@ -51,3 +51,7 @@ dependencyManagement {
         mavenBom "org.springframework.cloud:spring-cloud-dependencies:${springCloudVersion}"
     }
 }
+
+bootJar {
+    launchScript()
+}
